Add img and index.html and style.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="card">
                 <div class="sec1img">
-                    <img src="../Project Landing Page/img/evermore.jpg" alt="This is an Image">
+                    <img src="../swifty-landing-page/img/evermore.jpg" alt="This is an Image">
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="card-container">
                 <div class="card2">
                     <div class="card-image">
-                        <img id="sec2s" src="../Project Landing Page/img/autumn.jpg" alt="evermore">
+                        <img id="sec2s" src="../swifty-landing-page/img/autumn.jpg" alt="evermore">
                         <div class="card-text">
                             Gray December, I guess i'm feeling unmoored.
                         </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="card2">
                     <div class="card-image">
-                        <img id="sec2s" src="../Project Landing Page/img/exile.jpg" alt="exile">
+                        <img id="sec2s" src="../swifty-landing-page/img/exile.jpg" alt="exile">
                         <div class="card-text">
                             I think i've seen this film before, and i didn't like the ending.
                         </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="card2">
                     <div class="card-image">
-                        <img id="sec2s" src="../Project Landing Page/img/seven.jpg" alt="seven">
+                        <img id="sec2s" src="../swifty-landing-page/img/seven.jpg" alt="seven">
                         <div class="card-text">
                             Please picture me in the trees, i hit my peak at seven feet.
                         </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="card2">
                     <div class="card-image">
-                        <img id="sec2s" src="../Project Landing Page/img/theone.jpg" alt="the one">
+                        <img id="sec2s" src="../swifty-landing-page/img/theone.jpg" alt="the one">
                         <div class="card-text">
                             If you never bleed, you'll never gonna grow.
                         </div>
